Issue 1797: Storage provider naming refactoring
UI fixes.

--- a/src/app/modules/storage-management/pages/manage-repository/manage-repository.component.html
+++ b/src/app/modules/storage-management/pages/manage-repository/manage-repository.component.html
@@ -29,7 +29,7 @@
                     </mat-form-field>
 
                     <mat-form-field>
-                        <mat-select placeholder="Implementation" formControlName="implementation"
+                        <mat-select placeholder="Storage provider" formControlName="storageProvider"
                                     [disableOptionCentering]="true">
                             <mat-option value="file-system">file-system</mat-option>
                         </mat-select>
