Issue 1797: Storage provider naming refactoring
UI fixes.

--- a/src/app/modules/storage-management/pages/manage-repository/manage-repository.component.html
+++ b/src/app/modules/storage-management/pages/manage-repository/manage-repository.component.html
@@ -31,7 +31,7 @@
                     <mat-form-field>
                         <mat-select placeholder="Storage provider" formControlName="storageProvider"
                                     [disableOptionCentering]="true">
-                            <mat-option value="file-system">file-system</mat-option>
+                            <mat-option value="local">local</mat-option>
                         </mat-select>
                     </mat-form-field>
 
