--- a/src/app/modules/storage-management/pages/manage-repository/manage-repository.component.html
+++ b/src/app/modules/storage-management/pages/manage-repository/manage-repository.component.html
@@ -57,7 +57,7 @@
                     </mat-form-field>
 
                     <div formGroupName="repositoryConfiguration">
-                      <mat-checkbox [checked]="overrideAlgorithmConfig" color="primary" (change)="onOverrideAlgorithmConfigChange()">
+                      <mat-checkbox *ngIf="isMavenLayout()" [checked]="overrideAlgorithmConfig" color="primary" (change)="onOverrideAlgorithmConfigChange()">
                         Override checksum digest algorithms
                       </mat-checkbox>
                       <mat-form-field *ngIf="isMavenLayout() && overrideAlgorithmConfig">
