--- a/src/app/modules/storage-management/pages/browse-storages/components/list-repositories/list-repositories.component.html
+++ b/src/app/modules/storage-management/pages/browse-storages/components/list-repositories/list-repositories.component.html
@@ -1,4 +1,4 @@
-<div style="width: 100%; height: 73vh; position:relative; overflow: hidden;" fxLayout="column">
+<div style="width: 100%; height: 100%; position:relative; overflow: hidden;" fxLayout="column">
     <table mat-table [dataSource]="repositoriesSource" style="width: 100%;">
         <ng-container *ngFor="let column of repositoryColumns;">
             <ng-container [matColumnDef]="column">
