--- a/src/app/modules/storage-management/pages/browse-storages/components/list-storages/list-storages.component.html
+++ b/src/app/modules/storage-management/pages/browse-storages/components/list-storages/list-storages.component.html
@@ -1,4 +1,4 @@
-<div style="position:relative; height: 73vh; ">
+<div style="position:relative; height: 100%; ">
 
     <table class="mat-table" style="width: 100%;">
         <thead>
@@ -17,7 +17,7 @@
                     <a (click)="openStorageForm()" style="margin-right: 10px;">
                         <i class="icons ion-md-add-circle-outline"></i>
                     </a>
-                    <a (click)="refreshStorages()">
+                    <a (click)="refreshStorages()" style="margin-right: 10px;">
                         <i class="icons ion-md-refresh"></i>
                     </a>
                 </th>
