UI breaks for storages on some resolutions #1887

--- a/src/app/modules/storage-management/pages/browse-storages/components/list-storages/list-storages.component.html
+++ b/src/app/modules/storage-management/pages/browse-storages/components/list-storages/list-storages.component.html
@@ -17,7 +17,7 @@
                     <a (click)="openStorageForm()" style="margin-right: 10px;">
                         <i class="icons ion-md-add-circle-outline"></i>
                     </a>
-                    <a (click)="refreshStorages()" style="margin-right: 10px;">
+                    <a (click)="refreshStorages()">
                         <i class="icons ion-md-refresh"></i>
                     </a>
                 </th>
